--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -94,7 +94,7 @@
       <img src="/images/savings.svg" height="200" width="300" alt="Architecture">
     </div>
   </section>
-  <section class="info whitepaper">
+  <section class="info whitepaper" id="whitepaper">
     <div class="content">
       <aside>
         <h2>Whitepaper</h2>
@@ -127,28 +127,30 @@
     </div>
   </section>
   <footer>
-    <div>
-      <figure>
-        <a href="/"><img src="/images/veris.svg" height="40" alt="Veris"></a>
-      </figure>
-      <p>&copy; 2017 Veris Foundation. All Rights Reserved</p>
+    <div class="content">
+      <div>
+        <figure>
+          <a href="/"><img src="/images/veris.svg" height="40" alt="Veris"></a>
+        </figure>
+        <p>&copy; 2017 Veris Foundation. All Rights Reserved</p>
+      </div>
+      <nav>
+        <ul>
+          <li><a href="/">Home</a></li>
+          <li><a href="/team">Team</a></li>
+          <li><a href="/#veris">Veris</a></li>
+          <li><a href="/faq">FAQ</a></li>
+          <li><a href="/#contact">Contact</a></li>
+        </ul>
+        <ul class="social">
+          <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+          <li><a href="#"><i class="fab fa-medium-m"></i></a></li>
+          <li><a href="#"><i class="fab fa-slack-hash"></i></a></li>
+          <li><a href="#"><i class="fab fa-google"></i></a></li>
+          <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
+          <li><a href="#"><i class="fab fa-github"></i></a></li>
+        </ul>
+      </nav>
     </div>
-    <nav>
-      <ul>
-        <li class="active"><a href="/">Home</a></li>
-        <li><a href="/team">Team</a></li>
-        <li><a href="/#veris">Veris</a></li>
-        <li><a href="/faq">FAQ</a></li>
-        <li><a href="/#contact">Contact</a></li>
-      </ul>
-      <ul class="social">
-        <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-        <li><a href="#"><i class="fab fa-medium-m"></i></a></li>
-        <li><a href="#"><i class="fab fa-slack-hash"></i></a></li>
-        <li><a href="#"><i class="fab fa-google"></i></a></li>
-        <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
-        <li><a href="#"><i class="fab fa-github"></i></a></li>
-      </ul>
-    </nav>
   </footer>
 </body>
