--- a/app/assets/team/index.html
+++ b/app/assets/team/index.html
@@ -17,9 +17,8 @@
       <ul>
         <li><a href="/">Home</a></li>
         <li class="active"><a href="/team">Team</a></li>
-        <li><a href="/#veris">Veris</a></li>
         <li><a href="/faq">FAQ</a></li>
-        <li><a href="/#contact">Contact</a></li>
+        <li><a href="/contact">Contact</a></li>
         <li class="whitepaper"><a href="/#whitepaper">Whitepaper</a></li>
       </ul>
     </nav>
@@ -74,9 +73,8 @@
         <ul>
           <li><a href="/">Home</a></li>
           <li><a href="/team">Team</a></li>
-          <li><a href="/#veris">Veris</a></li>
           <li><a href="/faq">FAQ</a></li>
-          <li><a href="/#contact">Contact</a></li>
+          <li><a href="/contact">Contact</a></li>
         </ul>
         <ul class="social">
           <li><a href="#"><i class="fab fa-twitter"></i></a></li>
