Style contact form

--- a/app/assets/contact/index.html
+++ b/app/assets/contact/index.html
@@ -49,6 +49,9 @@
               <label for="message">Message</label>
               <textarea name="message" rows="8" cols="80"></textarea>
             </p>
+            <p>
+              <button type="submit">Submit</button>
+            </p>
           </form>
         </aside>
         <aside>
