--- a/contact/index.html
+++ b/contact/index.html
@@ -1,5 +1,14 @@
 <!DOCTYPE html>
 <head>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-90235032-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || []
+    function gtag() {
+      dataLayer.push(arguments)
+    }
+    gtag('js', new Date())
+    gtag('config', 'UA-90235032-1')
+  </script>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>Veris Foundation</title>
@@ -28,18 +37,18 @@
       <div class="content">
         <aside>
           <p>If you are interested in learning more about the Veris Foundation, please contact us by filling out the form below.</p>
-          <form action="">
+          <form>
             <p>
-              <label for="first-name">First Name</label>
-              <input type="text" name="first-name">
+              <label for="givenName">First Name</label>
+              <input type="text" name="givenName">
             </p>
             <p>
-              <label for="last-name">Last Name</label>
-              <input type="text" name="last-name">
+              <label for="familyName">Last Name</label>
+              <input type="text" name="familyName">
             </p>
             <p>
-              <label for="email-address">Email Address</label>
-              <input type="email" name="email-address">
+              <label for="emailAddress">Email</label>
+              <input type="email" name="emailAddress">
             </p>
             <p>
               <label for="subject">Subject</label>
@@ -93,4 +102,11 @@
       </nav>
     </div>
   </footer>
+  <div class="modal">
+    <div class="dialog">
+      <h2>Thank You</h2>
+      <p>We'll be in touch soon!</p>
+      <button type="submit">OK</button>
+    </div>
+  </div>
 </body>
