--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -15,8 +15,8 @@
   <meta name="author" content="verisfoundation.com" />
   <title>Veris Foundation</title>
   <link href="https://fonts.googleapis.com/css?family=Raleway:400,700" rel="stylesheet">
-  <link rel="stylesheet" href="/app.css">
-  <script src="/app.js"></script>
+  <link rel="stylesheet" href="./app.css">
+  <script src="./app.js"></script>
   <script>require('main')</script>
 </head>
 <body>
@@ -24,14 +24,14 @@
     <header>
       <nav>
         <figure>
-          <a href="/"><img src="/images/veris-white.svg" height="40" alt="Veris"></a>
+          <a href="./"><img src="./images/veris-white.svg" height="40" alt="Veris"></a>
         </figure>
         <ul>
-          <li class="active"><a href="/">Home</a></li>
-          <li><a href="/team">Team</a></li>
-          <li><a href="/faq">FAQ</a></li>
-          <li><a href="/contact">Contact</a></li>
-          <li class="whitepaper"><a href="/#whitepaper">Whitepaper</a></li>
+          <li class="active"><a href="./">Home</a></li>
+          <li><a href="./team">Team</a></li>
+          <li><a href="./faq">FAQ</a></li>
+          <li><a href="./contact">Contact</a></li>
+          <li class="whitepaper"><a href="./#whitepaper">Whitepaper</a></li>
         </ul>
       </nav>
     </header>
@@ -44,7 +44,7 @@
       </p>
       <ul class="call-to-action">
         <li class="ico"><a href="https://ico.verisfoundation.com">Checkout the ICO</a></li>
-        <li class="whitepaper"><a href="/#whitepaper">Read the Whitepaper</a></li>
+        <li class="whitepaper"><a href="./#whitepaper">Read the Whitepaper</a></li>
       </ul>
     </div>
   </div>
@@ -68,7 +68,7 @@
           portions of this complex process.
         </p>
       </aside>
-      <img src="/images/architecture.svg" height="200" width="300" alt="Architecture">
+      <img src="./images/architecture.svg" height="200" width="300" alt="Architecture">
     </div>
   </section>
   <section class="info">
@@ -87,7 +87,7 @@
           and upgrades voted on by users of the platform.
         </p>
       </aside>
-      <img src="/images/security.svg" height="200" width="300" alt="Security">
+      <img src="./images/security.svg" height="200" width="300" alt="Security">
     </div>
   </section>
   <section class="info">
@@ -101,7 +101,7 @@
           would have amounted to $59 billion USD saved in 2015.
         </p>
       </aside>
-      <img src="/images/savings.svg" height="200" width="300" alt="Architecture">
+      <img src="./images/savings.svg" height="200" width="300" alt="Architecture">
     </div>
   </section>
   <section class="info whitepaper" id="whitepaper">
@@ -142,16 +142,16 @@
     <div class="content">
       <div>
         <figure>
-          <a href="/"><img src="/images/veris.svg" height="40" alt="Veris"></a>
+          <a href="./"><img src="./images/veris.svg" height="40" alt="Veris"></a>
         </figure>
         <p>&copy; 2017 Veris Foundation. All Rights Reserved</p>
       </div>
       <nav>
         <ul>
-          <li><a href="/">Home</a></li>
-          <li><a href="/team">Team</a></li>
-          <li><a href="/faq">FAQ</a></li>
-          <li><a href="/contact">Contact</a></li>
+          <li><a href="./">Home</a></li>
+          <li><a href="./team">Team</a></li>
+          <li><a href="./faq">FAQ</a></li>
+          <li><a href="./contact">Contact</a></li>
         </ul>
         <ul class="social">
           <li><a href="#"><i class="fab fa-twitter"></i></a></li>
@@ -159,7 +159,7 @@
           <li><a href="#"><i class="fab fa-slack-hash"></i></a></li>
           <li><a href="#"><i class="fab fa-google"></i></a></li>
           <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
-          <li><a href="#"><i class="fab fa-github"></i></a></li>
+          <li><a href="https://github.com/VerisFoundation"><i class="fab fa-github"></i></a></li>
         </ul>
       </nav>
     </div>
