--- a/faq/index.html
+++ b/faq/index.html
@@ -13,22 +13,22 @@
   <meta name="viewport" content="width=device-width">
   <title>Veris Foundation</title>
   <link href="https://fonts.googleapis.com/css?family=Raleway:400,700" rel="stylesheet">
-  <link rel="stylesheet" href="/app.css">
-  <script src="/app.js"></script>
+  <link rel="stylesheet" href="../app.css">
+  <script src="../app.js"></script>
   <script>require('main')</script>
 </head>
 <body>
   <header>
     <nav>
       <figure>
-        <a href="/"><img src="/images/veris.svg" height="40" alt="Veris"></a>
+        <a href="../"><img src="../images/veris.svg" height="40" alt="Veris"></a>
       </figure>
       <ul>
-        <li><a href="/">Home</a></li>
-        <li><a href="/team">Team</a></li>
-        <li class="active"><a href="/faq">FAQ</a></li>
-        <li><a href="/contact">Contact</a></li>
-        <li class="whitepaper"><a href="/#whitepaper">Whitepaper</a></li>
+        <li><a href="../">Home</a></li>
+        <li><a href="../team">Team</a></li>
+        <li class="active"><a href="../faq">FAQ</a></li>
+        <li><a href="../contact">Contact</a></li>
+        <li class="whitepaper"><a href="../#whitepaper">Whitepaper</a></li>
       </ul>
     </nav>
   </header>
@@ -97,16 +97,16 @@
     <div class="content">
       <div>
         <figure>
-          <a href="/"><img src="/images/veris.svg" height="40" alt="Veris"></a>
+          <a href="../"><img src="../images/veris.svg" height="40" alt="Veris"></a>
         </figure>
         <p>&copy; 2017 Veris Foundation. All Rights Reserved</p>
       </div>
       <nav>
         <ul>
-          <li><a href="/">Home</a></li>
-          <li><a href="/team">Team</a></li>
-          <li><a href="/faq">FAQ</a></li>
-          <li><a href="/contact">Contact</a></li>
+          <li><a href="../">Home</a></li>
+          <li><a href="../team">Team</a></li>
+          <li><a href="../faq">FAQ</a></li>
+          <li><a href="../contact">Contact</a></li>
         </ul>
         <ul class="social">
           <li><a href="#"><i class="fab fa-twitter"></i></a></li>
@@ -114,7 +114,7 @@
           <li><a href="#"><i class="fab fa-slack-hash"></i></a></li>
           <li><a href="#"><i class="fab fa-google"></i></a></li>
           <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
-          <li><a href="#"><i class="fab fa-github"></i></a></li>
+          <li><a href="https://github.com/VerisFoundation"><i class="fab fa-github"></i></a></li>
         </ul>
       </nav>
     </div>
