--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -97,7 +97,7 @@
         <h2>Up to $59b in expense savings per year</h2>
         <p>
           Users of the platform will take advantage of up to a 10%
-          reduction of operating expenses. Fully adopted this
+          reduction of operating expense. Fully adopted this
           would have amounted to $59 billion USD saved in 2015.
         </p>
       </aside>
