--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -109,10 +109,10 @@
       <aside>
         <h2>Whitepaper</h2>
         <p>
-          All base data is secured by the encryption which
-          allows for blockchains to function. Any patient or
-          revenue data is additionally secured via encryption
-          of the smart contract.
+          Our whitepaper is currently available by request only.
+          Requests for the whitepaper can be submitted via
+          the form to the right.
+          All information is kept confidential and never shared.
         </p>
       </aside>
       <form>
