Social media links and fixed SVG

--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -154,11 +154,10 @@
           <li><a href="./contact">Contact</a></li>
         </ul>
         <ul class="social">
-          <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-          <li><a href="#"><i class="fab fa-medium-m"></i></a></li>
-          <li><a href="#"><i class="fab fa-slack-hash"></i></a></li>
-          <li><a href="#"><i class="fab fa-google"></i></a></li>
-          <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
+          <li><a href="https://twitter.com/verisfoundation"><i class="fab fa-twitter"></i></a></li>
+          <li><a href="https://medium.com/@verisfoundation"><i class="fab fa-medium-m"></i></a></li>
+          <li><a href="https://verisfoundation.slack.com"><i class="fab fa-slack-hash"></i></a></li>
+          <li><a href="https://www.linkedin.com/company/theverisfoundation"><i class="fab fa-linkedin-in"></i></a></li>
           <li><a href="https://github.com/VerisFoundation"><i class="fab fa-github"></i></a></li>
         </ul>
       </nav>
