--- a/index.html
+++ b/index.html
@@ -109,10 +109,10 @@
       <aside>
         <h2>Whitepaper</h2>
         <p>
-          Our whitepaper is currently available by request only.
-          Requests for the whitepaper can be submitted via
-          the form to the right.
-          All information is kept confidential and never shared.
+          All base data is secured by the encryption which
+          allows for blockchains to function. Any patient or
+          revenue data is additionally secured via encryption
+          of the smart contract.
         </p>
       </aside>
       <form>
@@ -154,11 +154,10 @@
           <li><a href="./contact">Contact</a></li>
         </ul>
         <ul class="social">
-          <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-          <li><a href="#"><i class="fab fa-medium-m"></i></a></li>
-          <li><a href="#"><i class="fab fa-slack-hash"></i></a></li>
-          <li><a href="#"><i class="fab fa-google"></i></a></li>
-          <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
+          <li><a href="https://twitter.com/verisfoundation"><i class="fab fa-twitter"></i></a></li>
+          <li><a href="https://medium.com/@verisfoundation"><i class="fab fa-medium-m"></i></a></li>
+          <li><a href="https://verisfoundation.slack.com"><i class="fab fa-slack-hash"></i></a></li>
+          <li><a href="https://www.linkedin.com/company/theverisfoundation"><i class="fab fa-linkedin-in"></i></a></li>
           <li><a href="https://github.com/VerisFoundation"><i class="fab fa-github"></i></a></li>
         </ul>
       </nav>
