Fix whitepaper modal

--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -163,4 +163,11 @@
       </nav>
     </div>
   </footer>
+  <div class="modal">
+    <div class="dialog">
+      <h2>Thank You</h2>
+      <p>We'll be in touch soon!</p>
+      <button type="submit">OK</button>
+    </div>
+  </div>
 </body>
