A number of fixes for IE

--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -11,13 +11,13 @@
   </script>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <meta name="description" content="Reducing Healthcare Expense" />
-  <meta name="author" content="verisfoundation.com" />
+  <meta name="description" content="Reducing Healthcare Expense">
+  <meta name="author" content="verisfoundation.com">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Veris Foundation</title>
   <link href="https://fonts.googleapis.com/css?family=Raleway:400,700" rel="stylesheet">
   <link rel="stylesheet" href="./app.css">
   <script src="./app.js"></script>
-  <script>require('main')</script>
 </head>
 <body>
   <div class="hero">
