--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -77,10 +77,10 @@
         <label>Security &amp; Administration</label>
         <h2>Strong Governance</h2>
         <p>
-          All base data is secured by the encryption which
+          All data is secured by base encryption which
           allows for blockchains to function. Any patient or
           revenue data is additionally secured via encryption
-          of the smart contract.
+          within the smart contract.
         </p>
         <p>
           Governance of the chain is directed by a non-profit,
