--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <head>
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-104490864-1"></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-90235032-1"></script>
   <script>
     window.dataLayer = window.dataLayer || []
     function gtag() {
       dataLayer.push(arguments)
     }
     gtag('js', new Date())
-    gtag('config', 'UA-104490864-1')
+    gtag('config', 'UA-90235032-1')
   </script>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
@@ -40,7 +40,7 @@
       <p>
         The Veris Foundation is focused on connecting payers with providers,
         reducing yearly healthcare expenses by up to $59 billion, ultimately
-        lowering healthcare costs for patients.
+        lowering healthcare costs for patients..
       </p>
       <ul class="call-to-action">
         <li class="ico"><a href="https://ico.verisfoundation.com">Checkout the ICO</a></li>
@@ -77,10 +77,10 @@
         <label>Security &amp; Administration</label>
         <h2>Strong Governance</h2>
         <p>
-          All data is secured by base encryption which
+          All base data is secured by the encryption which
           allows for blockchains to function. Any patient or
           revenue data is additionally secured via encryption
-          within the smart contract.
+          of the smart contract.
         </p>
         <p>
           Governance of the chain is directed by a non-profit,
@@ -110,7 +110,8 @@
         <h2>Whitepaper</h2>
         <p>
           Our whitepaper is currently available by request only.
-          Requests can be submitted via the form to the right.
+          Requests for the whitepaper can be submitted via
+          the form to the right.
           All information is kept confidential and never shared.
         </p>
       </aside>
@@ -154,7 +155,7 @@
         </ul>
         <ul class="social">
           <li><a href="https://twitter.com/verisfoundation"><i class="fab fa-twitter"></i></a></li>
-          <li><a href="https://medium.com/verisfoundation"><i class="fab fa-medium-m"></i></a></li>
+          <li><a href="https://medium.com/@verisfoundation"><i class="fab fa-medium-m"></i></a></li>
           <li><a href="https://verisfoundation.slack.com"><i class="fab fa-slack-hash"></i></a></li>
           <li><a href="https://www.linkedin.com/company/theverisfoundation"><i class="fab fa-linkedin-in"></i></a></li>
           <li><a href="https://github.com/VerisFoundation"><i class="fab fa-github"></i></a></li>
