--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       <p>
         The Veris Foundation is focused on connecting payers with providers,
         reducing yearly healthcare expenses by up to $59 billion, ultimately
-        lowering healthcare costs for patients..
+        lowering healthcare costs for patients.
       </p>
       <ul class="call-to-action">
         <li class="ico"><a href="https://ico.verisfoundation.com">Checkout the ICO</a></li>
