--- a/team/index.html
+++ b/team/index.html
@@ -27,6 +27,7 @@
         <li class="active"><a href="../team">Team</a></li>
         <li><a href="../faq">FAQ</a></li>
         <li><a href="../contact">Contact</a></li>
+        <li><a href="https://medium.com/@verisfoundation" target="_blank">Blog</a></li>
         <li class="whitepaper"><a href="../#whitepaper">Whitepaper</a></li>
       </ul>
     </nav>
@@ -35,7 +36,7 @@
     <h1>Our Team</h1>
     <section class="info">
       <div class="content">
-        <img src="../images/chris.png" alt="Photograph of Chris Plance" width="405" height="570">
+        <img src="../images/chris.png" alt="Photograph of Chris Plance" width="300">
         <aside>
           <label>Founder</label>
           <h2>Chris Plance</h2>
@@ -65,7 +66,30 @@
               appeals and post payment reviews. Eric has also been instrumental
               in the implementation of several new billing systems.</p>
             </aside>
-            <img src="../images/eric.png" alt="Photograph of Eric Lawlor" width="405" height="570">
+            <img src="../images/eric.png" alt="Photograph of Eric Lawlor" width="300">
+      </div>
+    </section>
+    <section class="info">
+      <div class="content">
+        <img src="../images/dan.png" alt="Photograph of Chris Plance" width="300">
+        <aside>
+          <label>Advisor</label>
+          <h2>Dan Riston</h2>
+          <p>Dan has 30 years experience on the payer side of healthcare.
+            During this time he has been primarily involved with the
+            TPA (Third Part Administration of benefits) industry.
+            The first 12 years as CFO and COO and the last 18 years as
+            President and CEO of a national TPA.  This tenure has
+            allowed him to witness claim paying from when it was
+            just entering the computer age to where it is today.</p>
+          <p>Simultaneously during his healthcare career he has
+            participated in many different efforts to improve the
+            way claims are paid.  He has participated in the development
+            of a national PPO, been President of a company that developed
+            one of the first electronic claims submission systems and, has
+            been an advisor to numerous cost containment and claims adjudication
+            companies.</p>
+        </aside>
       </div>
     </section>
   </main>
