--- a/team/index.html
+++ b/team/index.html
@@ -71,7 +71,7 @@
     </section>
     <section class="info">
       <div class="content">
-        <img src="../images/dan.png" alt="Photograph of Chris Plance" width="300">
+        <img src="../images/Dan.png" alt="Photograph of Dan Riston" width="300">
         <aside>
           <label>Advisor</label>
           <h2>Dan Riston</h2>
@@ -110,7 +110,7 @@
         </ul>
         <ul class="social">
           <li><a href="https://twitter.com/verisfoundation"><i class="fab fa-twitter"></i></a></li>
-          <li><a href="https://medium.com/@verisfoundation"><i class="fab fa-medium-m"></i></a></li>
+          <li><a href="https://medium.com/verisfoundation"><i class="fab fa-medium-m"></i></a></li>
           <li><a href="https://verisfoundation.slack.com"><i class="fab fa-slack-hash"></i></a></li>
           <li><a href="https://www.linkedin.com/company/theverisfoundation"><i class="fab fa-linkedin-in"></i></a></li>
           <li><a href="https://github.com/VerisFoundation"><i class="fab fa-github"></i></a></li>
