--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           <li><a href="./team">Team</a></li>
           <li><a href="./faq">FAQ</a></li>
           <li><a href="./contact">Contact</a></li>
-          <li><a href="https://medium.com/@verisfoundation" target="_blank">Blog</a></li>
+          <li><a href="https://medium.com/verisfoundation" target="_blank">Blog</a></li>
           <li class="whitepaper"><a href="./#whitepaper">Whitepaper</a></li>
         </ul>
       </nav>
