--- a/team/index.html
+++ b/team/index.html
@@ -27,7 +27,7 @@
         <li class="active"><a href="../team">Team</a></li>
         <li><a href="../faq">FAQ</a></li>
         <li><a href="../contact">Contact</a></li>
-        <li><a href="https://medium.com/@verisfoundation" target="_blank">Blog</a></li>
+        <li><a href="https://medium.com/verisfoundation" target="_blank">Blog</a></li>
         <li class="whitepaper"><a href="../#whitepaper">Whitepaper</a></li>
       </ul>
     </nav>
