--- a/contact/index.html
+++ b/contact/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <head>
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-90235032-1"></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-104490864-1"></script>
   <script>
     window.dataLayer = window.dataLayer || []
     function gtag() {
       dataLayer.push(arguments)
     }
     gtag('js', new Date())
-    gtag('config', 'UA-90235032-1')
+    gtag('config', 'UA-104490864-1')
   </script>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
@@ -27,7 +27,7 @@
         <li><a href="../team">Team</a></li>
         <li><a href="../faq">FAQ</a></li>
         <li class="active"><a href="../contact">Contact</a></li>
-        <li><a href="https://medium.com/@verisfoundation" target="_blank">Blog</a></li>
+        <li><a href="https://medium.com/verisfoundation" target="_blank">Blog</a></li>
         <li class="whitepaper"><a href="../#whitepaper">Whitepaper</a></li>
       </ul>
     </nav>
@@ -93,7 +93,7 @@
         </ul>
         <ul class="social">
           <li><a href="https://twitter.com/verisfoundation"><i class="fab fa-twitter"></i></a></li>
-          <li><a href="https://medium.com/@verisfoundation"><i class="fab fa-medium-m"></i></a></li>
+          <li><a href="https://medium.com/verisfoundation"><i class="fab fa-medium-m"></i></a></li>
           <li><a href="https://verisfoundation.slack.com"><i class="fab fa-slack-hash"></i></a></li>
           <li><a href="https://www.linkedin.com/company/theverisfoundation"><i class="fab fa-linkedin-in"></i></a></li>
           <li><a href="https://github.com/VerisFoundation"><i class="fab fa-github"></i></a></li>
